RESOLVED FIXED97520
WKProcessGroup can't load injected bundle with file URL
https://bugs.webkit.org/show_bug.cgi?id=97520
Summary WKProcessGroup can't load injected bundle with file URL
Sam Weinig
Reported 2012-09-24 21:31:15 PDT
WKProcessGroup can't load injected bundle with file URL
Attachments
Patch (1.51 KB, patch)
2012-09-24 21:31 PDT, Sam Weinig
andersca: review+
Sam Weinig
Comment 1 2012-09-24 21:31:54 PDT
Sam Weinig
Comment 2 2012-09-24 21:32:56 PDT
Note You need to log in before you can comment on or make changes to this bug.