WKProcessGroup can't load injected bundle with file URL <rdar://problem/12322774> https://bugs.webkit.org/show_bug.cgi?id=97520

Reviewed by Anders Carlsson.

* UIProcess/API/mac/WKProcessGroup.mm:
(-[WKProcessGroup initWithInjectedBundleURL:]):
Fix typo. We need to pass the string as path, not as a URL.


Canonical link: https://commits.webkit.org/115475@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129454 268f45cc-cd09-0410-ab3c-d52691b4dbfc